--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,9 @@
   "description": "Backend server for the Jobby App",
   "main": "server.js",
   "scripts": {
-  "start": "node server.js",
-  "dev": "nodemon server.js"
-},
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "debug": "^4.3.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
